--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+output/
+analysis/
+math_checks/
+sql/
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
@@ -38,3 +42,4 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
